--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # ----------- CONFIGURABLE START -----------
-title:            "吕晨"
-description:      "Chen's Blog"
-url:              lvchen727.github.io # Site url, without a slash at the end.
-signoff:          "Chen" # Your name
+title:            "Scribble"
+description:      "Such theme, very cool."
+url:              http://scribble.muan.co # Site url, without a slash at the end.
+signoff:          "muan" # Your name
 facebook_appid:   # APP ID for like button, remove from /_includes/share.html if unwanted.
 google_analytics: # Set tracking, remove from /javascripts/basic.js if unwanted.
 share:            false # Turn on twitter and facebook share buttons
@@ -14,7 +14,6 @@ links:
   - name:         About me
     url:          /about
     external:     false
- 
 # ------------ CONFIGURABLE END ------------
 
 permalink:        /posts/:title
